[package]
name = "ssh-releaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.7.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
serde = { version = "*", features = ["derive"] }

my-settings-reader = { tag = "0.3.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }
my-ssh = { path = "../my-jet-tools/my-ssh" }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "placeholders",
    "base64",
    "with-tokio",
] }

serde_yaml = "*"


hyper = { version = "*", features = ["full"] }
hyper-util = { version = "*", features = ["tokio", "server", "http1", "http2"] }
http-body-util = "*"
bytes = "*"

flurl = { tag = "0.5.2", git = "https://github.com/MyJetTools/fl-url.git" }

cloudflare-sdk = { tag = "0.1.0", git = "https://github.com/MyJetTools/cloudflare-sdk.git" }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }
uuid = { version = "*", features = ["serde", "v4"] }


[build-dependencies]
